--- a/.classpath
+++ b/.classpath
@@ -14,8 +14,8 @@
 	<classpathentry exported="true" kind="lib" path="poi/poi-ooxml-4.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="poi/poi-ooxml-schemas-4.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="poi/xmlbeans-3.1.0.jar"/>
-	<classpathentry kind="lib" path="chilkat-9.5.0-jdk11-x64/chilkat.jar"/>
 	<classpathentry kind="lib" path="poi/mail-1.4.7.jar"/>
 	<classpathentry kind="lib" path="poi/activation-2.2.1.jar"/>
+	<classpathentry kind="lib" path="chilkat.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
